# IndieStudio

./: .gitignore  CMakeLists.txt  Findraylib.cmake  IndieStudio.cpp  IndieStudio.hpp  Makefile  todo  todo.txt
Builders/: BoxBuilder.hpp  CameraBuilder.cpp  CameraBuilder.hpp  Director.cpp  Director.hpp  IEntityBuilder.hpp  MapBuilder.cpp  MapBuilder.hpp  PlayerBuilder.cpp  PlayerBuilder.hpp  SphereBuilder.hpp
Components/: Bomb.cpp  Bomb.hpp  Camera.cpp  Camera.hpp  Collision.cpp  Collision.hpp  Health.hpp  IComponent.hpp  Ia.cpp  Movements.cpp  Movements.hpp  Object.cpp  Object.hpp  Render.cpp  Render.hpp  Shapes.cpp  Shapes.hpp  Text.cpp  Text.hpp
Encapsulation/: InputsHandler.cpp  InputsHandler.hpp  Sphere.cpp  Sphere.hpp
Entity/: Entity.cpp  Entity.hpp
System/: Draw.cpp  Draw.hpp  Menu.cpp  Menu.hpp  System.hpp  Time.cpp  Time.hpp
Texture/: box.csv
Texture/Explosion/: explode.gltf
Texture/bomb/: untitled.gltf
Texture/player_gametoons/: sceneblue.gltf  scenegreen.gltf  scenered.gltf  sceneyellow.gltf
